--- a/dates-history/day-000.md
+++ b/dates-history/day-000.md
@@ -1,1 +1,11 @@
 # 30 (Wednesday) December, 2020
+
+### Python
+
+<p>lib/pathlib</p>
+<p>lib/calendar</p>
+<p>lib/datetime</p>
+<p>lib/os</p>
+<p>__init__</p>
+<p>self</p>
+<p>JSON</p>
