--- a/dates-history/day-000.md
+++ b/dates-history/day-000.md
@@ -2,8 +2,8 @@
 
 ### Python
 
-<p>lib/pathlib</p>
-<p>lib/calendar</p>
+<p>lib/pathlib\ lib/calendar\ </p>
+<p></p>
 <p>lib/datetime</p>
 <p>lib/os</p>
 <p>__init__</p>
