--- a/dates-history/day-000.md
+++ b/dates-history/day-000.md
@@ -2,7 +2,7 @@
 
 ### Python
 
-<p>lib/pathlib \ lib/calendar \ </p>
+<p>lib/pathlib<br> lib/calendar<br> </p>
 <p></p>
 <p>lib/datetime</p>
 <p>lib/os</p>
