--- a/dates-history/day-000.md
+++ b/dates-history/day-000.md
@@ -2,10 +2,4 @@
 
 ### Python
 
-<p>lib/pathlib<br> lib/calendar<br> </p>
-<p></p>
-<p>lib/datetime</p>
-<p>lib/os</p>
-<p>__init__</p>
-<p>self</p>
-<p>JSON</p>
+<p>lib/pathlib<br>lib/calendar<br>lib/datetime<br>lib/os<br>__init__<br>self<br>JSON</p>
