--- a/dates-history/day-000.md
+++ b/dates-history/day-000.md
@@ -2,4 +2,4 @@
 
 ### Python
 
-<p>lib/pathlib<br>lib/calendar<br>lib/datetime<br>lib/os - Aprendi um pouco mais sobre como criar pastas e navegar nas mesma.<br>__init__<br>self<br>JSON - Manusear arquivos JSON localmente com Python e `open()`</p>
+<p>lib/pathlib<br>lib/calendar<br>lib/datetime<br>lib/os - Aprendi um pouco mais sobre como criar pastas e navegar nas mesma.<br>__init__<br>self<br>JSON - Manusear arquivos JSON localmente com Python e <code>`open()`</code></p>
