--- a/dates-history/day-005.md
+++ b/dates-history/day-005.md
@@ -1,1 +1,7 @@
 # 4 (Monday) January, 2021
+
+### Python
+
+**venv** &#8594 Aplicando e Refatorando meus projetos usando **venv** para controlar melhor as dependências.
+**pip freeze** &#8594 Usando para gerar lista de dependências para poder subir no github por questões de boas práticas.
+**os.walk()** &#8594 Utilizando para varrer e extrair arquitetura de diretórios e arquivos. 
