--- a/dates-history/day-005.md
+++ b/dates-history/day-005.md
@@ -2,7 +2,8 @@
 
 ### Python
 
-**venv** &#8594; Aplicando e Refatorando meus projetos usando **venv** para controlar melhor as dependências.
+**venv** 
+&#8594; Aplicando e Refatorando meus projetos usando **venv** para controlar melhor as dependências.
 
 **pip freeze** &#8594; Usando para gerar lista de dependências para poder subir no github por questões de boas práticas.
 
