--- a/dates-history/day-005.md
+++ b/dates-history/day-005.md
@@ -1,9 +1,16 @@
 # 4 (Monday) January, 2021
 
->### Python
+## Aprendizados
 
-**venv** <br>&#8594; Aplicando e Refatorando meus projetos usando **venv** para controlar melhor as dependências.
+**Python**
 
-**pip freeze** &#8594; Usando para gerar lista de dependências para poder subir no github por questões de boas práticas.
+- **venv** Aplicando e Refatorando meus projetos usando **venv** para controlar melhor as dependências.
 
-**os.walk()** &#8594; Utilizando para varrer e extrair arquitetura de diretórios e arquivos. 
+- **pip freeze** Usando para gerar lista de dependências para poder subir no github por questões de boas práticas.
+
+- **os.walk()** Utilizando para varrer e extrair arquitetura de diretórios e arquivos. 
+
+## Referências
+
+**Python**
+
