--- a/dates-history/day-005.md
+++ b/dates-history/day-005.md
@@ -8,9 +8,37 @@
 
 - **pip freeze** Usando para gerar lista de dependências para poder subir no github por questões de boas práticas.
 
-- **os.walk()** Utilizando para varrer e extrair arquitetura de diretórios e arquivos. 
+- **os.walk()** Utilizando para varrer e extrair arquitetura de diretórios e arquivos.
+
+**Markdown**
+
+- Aprendi várias coisas com vários exemplos de outros repositórios e sites.
 
 ## Referências
 
 **Python**
 
+[Python - List all files and directories](https://stackoverflow.com/questions/3207219/how-do-i-list-all-files-of-a-directory)
+
+[Python - Ways to add item in a Dict](https://stackoverflow.com/questions/6416131/add-a-new-item-to-a-dictionary-in-python)
+
+[Python - PyInstaller](https://www.pyinstaller.org/)
+
+[Python - Criamos um Utilitário com PYTHON! (finalizamos nosso mini-projeto) // Mão no Código #18](https://www.youtube.com/watch?v=wuRJDHs-x94&ab_channel=C%C3%B3digoFonteTV)
+
+[Python - Ambiente virtual Python no Windows (usando venv e VS Code)](https://www.youtube.com/watch?v=m1TYpvIYm74&ab_channel=Ot%C3%A1vioMiranda)
+
+[Python - StackOverflow - Is it bad to have my virtualenv directory inside my git repository?
+](https://stackoverflow.com/questions/6590688/is-it-bad-to-have-my-virtualenv-directory-inside-my-git-repository)
+
+[Python - pip freeze and requirements](https://www.youtube.com/watch?v=YGDNRbKt_QQ&ab_channel=CodingWithMitch)
+
+**Markdown**
+
+[Markdown - Markdown Cheatssheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet#videos)
+
+[Markdown - StackOverflow - Show math equations in markdown](https://stackoverflow.com/questions/33191744/how-to-add-new-line-in-markdown-presentation/33191810#:~:text=When%20you%20do%20want%20to,more%20spaces%2C%20then%20type%20return.&text=How%20to%20add%20new%20line%20in%20Markdown%20presentation%3F,-Check%20the%20following&text=To%20force%20a%20line%20return,the%20end%20of%20a%20line.&text=It's%20also%20better%20than%20two%20spaces%20because%20it's%20visible.)
+
+[Markdown - StackOverflow - Adding new lines in markdown](https://stackoverflow.com/questions/33191744/how-to-add-new-line-in-markdown-presentation/33191810#:~:text=When%20you%20do%20want%20to,more%20spaces%2C%20then%20type%20return.&text=How%20to%20add%20new%20line%20in%20Markdown%20presentation%3F,-Check%20the%20following&text=To%20force%20a%20line%20return,the%20end%20of%20a%20line.&text=It's%20also%20better%20than%20two%20spaces%20because%20it's%20visible.)
+
+[Markdown - Mastering Markdown - Github Guides](https://guides.github.com/features/mastering-markdown/)
