--- a/dates-history/day-005.md
+++ b/dates-history/day-005.md
@@ -2,13 +2,13 @@
 
 ## Aprendizados
 
-**Python**  
-- **venv** Aplicando e Refatorando meus projetos usando **venv** para controlar melhor as dependências.
-- **pip freeze** Usando para gerar lista de dependências para poder subir no github por questões de boas práticas.
-- **os.walk()** Utilizando para varrer e extrair arquitetura de diretórios e arquivos.
+- **Python**
+  - **venv** - Aplicando e Refatorando meus projetos usando **venv** para controlar melhor as dependências.
+  - **pip freeze** - Usando para gerar lista de dependências para poder subir no github por questões de boas práticas.
+  - **os.walk()** - Utilizando para varrer e extrair arquitetura de diretórios e arquivos.
 
-**Markdown**  
-- Aprendi várias coisas com vários exemplos de outros repositórios e sites.
+- **Markdown**
+  - Aprendi várias coisas com vários exemplos de outros repositórios e sites.  
 
 ## Referências
 
