--- a/dates-history/day-000.md
+++ b/dates-history/day-000.md
@@ -1,5 +1,32 @@
 # 30 (Wednesday) December, 2020
 
-### Python
+## Aprendizados
 
-<p>lib/pathlib<br>lib/calendar<br>lib/datetime<br>lib/os - Aprendi um pouco mais sobre como criar pastas e navegar nas mesma.<br>__init__<br>self<br>JSON - Manusear arquivos JSON localmente usando <code>with open() as f:</code></p>
+- **Python**
+  - **lib/os** - Aprendi um pouco mais sobre como criar pastas e navegar nas mesma.
+  - **__init__, self** - Aprendi o propósito do uso em classes python.
+  - **JSON e** <code>with open() as f:</code> - Ler/Escrever arquivos JSON localmente. 
+  - **lib/pathlib**  
+  - **lib/calendar**  
+  - **lib/datetime**  
+
+- **Markdown**
+  - **details/summary** - Toggle list in markdown
+## Referências
+
+**Python**  
+[StackOverflow - Find number of days in current month](https://stackoverflow.com/questions/9481136/how-to-find-number-of-days-in-the-current-month)  
+[StackOverflow - Get last day of month](https://stackoverflow.com/questions/42950/how-to-get-the-last-day-of-the-month)  
+[StackOverflow - Changing the current working directory in Python](https://stackoverflow.com/questions/431684/how-do-i-change-the-working-directory-in-python)  
+[Docs - Python datetime.date.month](https://docs.python.org/3/library/datetime.html#datetime.date.month)  
+[Docs - Python JSON encoder and decoder](https://docs.python.org/3/library/json.html)  
+[Python Best Pratices](https://data-flair.training/blogs/python-best-practices/)  
+[Python Best Practices for More Pythonic Code](https://realpython.com/tutorials/best-practices/)  
+[Reading and Writing JSON to a file](https://stackabuse.com/reading-and-writing-json-to-a-file-in-python/)  
+[List all files and directories](https://stackoverflow.com/questions/3207219/how-do-i-list-all-files-of-a-directory)  
+
+**JSON**  
+[StackOverflow - Can comments be used in json ?](https://stackoverflow.com/questions/244777/can-comments-be-used-in-json)  
+
+**Markdown**  
+[Github - Toggle list in markdown](https://gist.github.com/Ashton-W/864d09d71f7cb8e5b47ebaac02b98455)  
