--- a/dates-history/day-004.md
+++ b/dates-history/day-004.md
@@ -1,1 +1,21 @@
 # 3 (Sunday) January, 2021
+
+## Aprendizados
+
+- **Python**
+  - **Call function from another .py file** - Usando funções de outras classes criadas por mim mesmo.
+  - **Accessing index and element in for loops `for idx, item in enumerate(list)`**
+  - **Ternary conditional operator**
+  - **Apply mask in string**
+  - **String immutability**
+
+## Referências
+
+**Python**  
+[StackOverflow - Call function from another file](https://stackoverflow.com/questions/20309456/call-a-function-from-another-file)  
+[StackOverflow - Accessing index in for loops](https://stackoverflow.com/questions/522563/accessing-the-index-in-for-loops)  
+[StackOverflow - Ternary Condition Operator in Python](https://stackoverflow.com/questions/394809/does-python-have-a-ternary-conditional-operator)  
+[StackOverflow - Apply mask in strings with Python](https://stackoverflow.com/questions/26921164/how-to-apply-a-custom-mask-into-a-string-of-digits-in-python)  
+[StackOverflow - Add string in certain position in Python](https://stackoverflow.com/questions/5254445/add-string-in-a-certain-position-in-python)  
+
+
