--- a/dates-history/day-002.md
+++ b/dates-history/day-002.md
@@ -1,1 +1,14 @@
 # 1 (Friday) January, 2021
+
+## Aprendizados
+
+- **Python**
+  - **calendar.firstweekday()** - Aplicando e Refatorando meus projetos usando **venv** para controlar melhor as dependências.
+  - **calendar.iterweeksdays()** - Usando para gerar lista de dependências para poder subir no github por questões de boas práticas.
+
+## Referências
+
+**Python**  
+[Docs - Python calendar.weekdays](https://docs.python.org/3/library/calendar.html#calendar.firstweekday)  
+[GeekForGeeks - Python calendar module](https://www.geeksforgeeks.org/python-calendar-module-iterweekdays-method/)  
+[W3Resource - Module calendar iterweekdays](https://www.w3resource.com/python/module/calendar/iterweekdays.php)  
