--- a/dates-history/day-001.md
+++ b/dates-history/day-001.md
@@ -1,1 +1,15 @@
 # 31 (Thursday) December, 2020
+
+# 4 (Monday) January, 2021
+
+## Aprendizados
+
+- **Python**
+  - **collections**  
+  - **calendar**  
+
+## Referências
+
+**Python**  
+[Docs - Python collection](https://docs.python.org/3/library/collections.html)  
+[Docs - Python calendar](https://docs.python.org/3/library/calendar.html)  
