--- a/dates-history/day-003.md
+++ b/dates-history/day-003.md
@@ -1,1 +1,54 @@
 # 2 (Saturday) January, 2021
+
+## Aprendizados
+
+- **Python**
+  - **JSON lib** - Aplicando e Refatorando meus projetos usando **venv** para controlar melhor as dependências.  
+  - **Convert Dict to JSON** - `json.dump()` or `json.dumps()`  
+  - **Importing class from another file**  
+  - **Add element to a JSON file**  
+  - **Python `map()` function and `list(map())` on void functions**  
+  - **__pycache__*  
+  - **Functional programming in python** - Alguns aspectos como `map()`, `filter()` e `reduce()`.  
+  - **Getting full path of current files directory** - Usando `os.path.dirname()`, `os.path.abspath(os.getcwd())`, `pathlib.Path().absolute()`.  
+  - **Class Attributes** - Boas práticas com exemplos.  
+  - **os.chdir()** - Change directory.  
+  - **List directory** - Usando `os.listdir()` and `system('ls')`  
+  - **Move files** - Usando `shutil.move()`  
+  - **dateutil.relativedelta()** - Para calcular data dando meses ou dias como referência.  
+  - **Fixing pip installation**  
+  - **`str.lower()`**
+  
+- **Markdown**
+  - Aprendi várias coisas com vários exemplos de outros repositórios e sites.  
+
+## Referências
+
+**Python**  
+[StackOverflow - Importing class from another file](https://stackoverflow.com/questions/41276067/importing-class-from-another-file)  
+[StackOverflow - Add element into JSON file](https://stackoverflow.com/questions/22296496/add-element-to-a-json-file)  
+[StackOverflow - Understanding map() function](https://stackoverflow.com/questions/10973766/understanding-the-map-function)  
+[StackOverflow - What is `__pycache__` ?](https://stackoverflow.com/questions/16869024/what-is-pycache)  
+[StackOverflow - Using map() for void functions](https://stackoverflow.com/questions/47722712/use-map-for-functions-that-does-not-return-a-value)  
+[StackOverflow - Getting Current Working Directory in Python](https://stackoverflow.com/questions/3430372/how-do-i-get-the-full-path-of-the-current-files-directory)  
+[StackOverflow - Lowercase string in Python](https://stackoverflow.com/questions/6797984/how-do-i-lowercase-a-string-in-python)  
+[StackOverflow - Calculate days between 2 dates](https://stackoverflow.com/questions/7045920/how-to-calculate-the-number-of-days-in-the-years-between-2-dates-in-python)  
+[StackOverflow - Using relative delta in python](https://stackoverflow.com/questions/546321/how-do-i-calculate-the-date-six-months-from-the-current-date-using-the-datetime)  
+[StackOverflow - How do I change the working directory in Python?](https://stackoverflow.com/questions/431684/how-do-i-change-the-working-directory-in-python/13197763#13197763)  
+
+[GeekForGeeks - Python Dictionary to JSON](https://www.geeksforgeeks.org/how-to-convert-python-dictionary-to-json/)  
+[GeekForGeeks - Python map() function](https://www.geeksforgeeks.org/python-map-function/)  
+[GeekForGeeks - os.listdir()](https://www.geeksforgeeks.org/python-os-listdir-method/)  
+[GeekForGeeks - shutil.move()](https://www.geeksforgeeks.org/python-shutil-move-method/#:~:text=move()%20method%20Recursively%20moves,be%20overwritten%20depending%20on%20os.)  
+
+[W3Schools - Python JSON](https://www.w3schools.com/python/python_json.asp)  
+[Real Python - Understanding map() function](https://realpython.com/python-map-function/#understanding-map)  
+[Functional Progamming in Python](https://stackabuse.com/functional-programming-in-python/#:~:text=Functional%20Programming%20is%20a%20programming,processing%20data%20throughout%20its%20execution.&text=Python%20allows%20us%20to%20code,the%20map%20and%20filter%20functions.)  
+[TopTal - Python Class Attributes](https://www.toptal.com/python/python-class-attributes-an-overly-thorough-guide)  
+[Current Working Directory in Python](https://linuxize.com/post/python-get-change-current-working-directory/#:~:text=To%20find%20the%20current%20working,chdir(path)%20.)  
+[listdir vs. system('ls')](https://www.freecodecamp.org/news/python-list-files-in-a-directory-guide-listdir-vs-system-ls-explained-with-examples/#:~:text=Purpose%3A%20listdir%20returns%20the%20list,that%20you%20are%20working%20with.)  
+[w3resource - monthrange()](https://www.w3resource.com/python/module/calendar/monthrange.php)  
+[Index and slice string in Python](https://www.digitalocean.com/community/tutorials/how-to-index-and-slice-strings-in-python-3)  
+[Pypi - dateutil](https://pypi.org/project/python-dateutil/)  
+[pip.pypa - Installing pip](https://pip.pypa.io/en/stable/installing/#installing-with-get-pip-py)  
+[How to get the number of months between two dates in Python](https://www.kite.com/python/answers/how-to-get-the-number-of-months-between-two-dates-in-python#:~:text=Subtract%20the%20datetime.,get%20the%20difference%20in%20months.)  
