--- a/dates-history/day-007.md
+++ b/dates-history/day-007.md
@@ -1,1 +1,19 @@
 # 6 (Wednesday) January, 2021
+
+## Learned
+
+- **Javascript**
+  - **Differences about CommonJS  ES6 import**
+  - **How to use** `import from ''/export` on ES6.  
+  - **How to use** `require/module.exports` on CommonJS.  
+
+- **Electron**
+  - **Create Electron App** using `create-electron-app` or with `npm init` and `npm i electron` and configurating manually.  
+  - **Build an Electron APP** using `electron-forge`.  
+  - **Using Electron** as Tray Application (without the Browser).  
+  - **Enable Hot Reload** using `nodemon` and `electron-reload`.  
+  - **Read about Reactron applications**  
+
+- **Node**
+  -**nvm** using nvm to control node versions.  
+  -**npm** configurating `"scripts"` on `package.json` file.  
