--- a/dates-history/day-008.md
+++ b/dates-history/day-008.md
@@ -1,1 +1,19 @@
 # 7 (Thursday) January, 2021
+
+## Learned
+
+- **PHP**
+  - How to use **`Composer`** to install and manage dependencies.  
+  - **php.ini** to change some default env variables like `memory_limit`.  
+  
+- **Magentoo**
+  - **Installation** downloading and **installing .zip with** `magento CLI` and using `php composer` and downloading in **Magento Repo**.  
+
+- **Wamp Server**
+  - How to install different addons versions to use with wamp (like MySQL 8).  
+  
+- **MySQL**
+  - **Using `Mysql CLI`** to access database  
+  - Managing Databases (Showing all databases, all tables, etc) using **CLI**  
+  - Managing Users and setting up privileges using **CLI**  
+  
